Update smoothscroll, fix iOS card overflow

--- a/src/styles/elements/cards.scss
+++ b/src/styles/elements/cards.scss
@@ -9,6 +9,7 @@
   box-shadow: $shadow-0dp;
   user-select: none;
   outline: none;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 
   transition: 0.3s background-color $defaultCubic;
 
